# qt-journal-desktop

./: CMakeLists.txt  board-display.cpp  board-display.h  display-switch.cpp  display-switch.h  main-widget.cpp  main-widget.h  main.cpp  mainwindow.cpp  mainwindow.h  menu-widget.cpp  menu-widget.h  note-board-display.cpp  note-board-display.qml
board_display/: CMakeLists.txt  board-display.cpp  board-display.h  note-board-display.cpp  note-board-display.h  note-board-display.qml  qml_sources.qrc
display/: CMakeLists.txt  board-display.h  note-board-display.h
scroll_display/: CMakeLists.txt  scroll-display.cpp  scroll-display.h
